Fixing the "I forgot my password" wrap in Linux.
close #100

--- a/browserid/static/dialog/style.css
+++ b/browserid/static/dialog/style.css
@@ -146,7 +146,7 @@ div.note {
 }
 
 div.content {
-    width: 450px;
+    width: 470px;
     margin: auto;
     margin-top: 20px;
     text-align: left;
